# rokoko

./: .gitignore  calibration-microsoft-webcam.yml  fabfile.py  milestones  readme.md
Arduino/SPIMaster/: SPIMaster.ino
Arduino/SPISlave/: SPISlave.ino
Arduino/compactDummyClient/: compactDummyClient.ino
Arduino/compactImuClient/: compactImuClient.ino
Arduino/smart_skeleton_software_release_0.1/: home_board_version_0_2_code_version_0_1_arduino_1_0.ino
MPU9150Lib-master/Accel9150/: Accel9150.ino
VisualizeAll/: VisualizeAll.ino
aruco/: CMakeLists.txt  ChangeLog  README
aruco/src/: main.cpp  (+5 more)
aruco/utils_hrm/: CMakeLists.txt  aruco_hrm_create_board.cpp  aruco_hrm_create_dictionary.cpp  aruco_hrm_test.cpp  aruco_hrm_test_board.cpp
audio/: showcontroller.sh  udoo.sh
broker/: .gitignore  Makefile  README.md  requirements.txt  robroker  robroker.c  robroko-client.py  testpublish.c
camcalib/: addons.make
compactImuClient/: compactImuClient.ino
debugging/: imu-getname.py  imu-init.py  imu-renamer.py  imu.py
glove_streamer/: glove_streamer.ino  recv.py
imu-debugger/: debug.py  imu-getname.py  imu-renamer.py  imu.py
imu-udp-bridge/: main.py  main.py~  nodes
imu-udp-bridge-c/: Makefile  REQUREMENTS  main  main.c  prepare_sensor.c  settings.h  watchdog.py  work_glove.c  work_sensor.c
imuController/: config.make
imuOscVisualizer/: addons.make
imuTestVisualizer/: addons.make  config.make
legacy/: fabfile.py
pixyclient/: client.py
pixystreamer/: hello_pixy.cpp
sallycap/: CMakeLists.txt  TODO.md  rokoko-common.c  sallycap.cpp  sallycap.hpp
(+87 files in other folders)
